Convert timezone, validate already checkin, modify attendance request
